# comer2

./: BUILD_and_INSTALL_unix.sh  BUILD_and_INSTALL_unix__clang.sh  BUILD_and_INSTALL_win64.cmd  CMakeLists.txt  ChangeLog  LICENSE  README  README.md  VERSION  cuda-comer.kdev4
Linux_installer/: COMER2-installer1.sh
src/: .kdev_include_paths  CMakeLists.txt
src/blast2fa/: CMakeLists.txt  blast2fa.pl
src/comer/: CMakeLists.txt  comer.cpp  comer.h
src/comer2msa/: CMakeLists.txt  comer2msa.pl
src/db2bin/: CMakeLists.txt  db2bin.cpp  db2bin.h
src/env/: CMakeLists.txt  cvs2s  options.txt  ssss
src/extsp/: CMakeLists.txt  cheb.cpp  cheb.h  digamma.cpp  digamma.h  exp.cpp  exp.h  gamma.cpp  gamma.h  ivector.cpp  ivector.h  nsmatrix.cpp  nsmatrix.h  psl.h  pslerror.cpp  pslerror.h  pslmatrix.cpp  pslmatrix.h  pslvector.cpp  pslvector.h  rng.cpp  rng.h  spdmatrix.cpp  spdmatrix.h  zeta.cpp  zeta.h
src/extsp/rv/: rv.h  rvnorm.cpp  rvnorm.h
src/incconf/: localconfig.h
src/libHDP/: CMakeLists.txt  HDPbase.cpp  HDPbase.h  HDPbase_probmtx.cpp  HDPbase_probvec.cpp  HDPbase_rw.cpp  HDPscores.cpp  HDPscores.h  basin.cpp  basin.h  dish.cpp  dish.h  hdplib.h  menu.cpp  menu.h  restaurant.cpp  restaurant.h  rntchain.cpp  rntchain.h  table.cpp  table.h
src/liblib/: BinarySearchStructure.cpp  BinarySearchStructure.h  CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  CtxtCoefficients.cpp  CtxtCoefficients.h  alpha.cpp  alpha.h  debug.h  fmtdescription.h  logitnormal.cpp  logitnormal.h  macros.h  msg.cpp  msg.h  myalloc.h  mybase.h  myexception.cpp  myexception.h  myfiler.cpp  myfiler.h  mygetopt.cpp  mygetopt.h  mylimits.h  mysort.cpp  mysort.h  mystring.cpp  mystring.h  mytype.h  platform.h  preproc.h  root.cpp  root.h
src/libmycu/: CMakeLists.txt
src/libmycu/cualn/: AlnWriter.cpp  AlnWriter.h  AlnWriterJSON.cpp  AlnWriterPlain.cpp  DevCommThread.cpp  DevCommThread.h  Devices.cpp  Devices.cu  Devices.h  JobDispatcher.cpp  JobDispatcher.cpp.obs  JobDispatcher.h  JobDispatcher.h.obs
src/libmycu/cucom/: btckcoords.h  cucommon.h  myassert.h  myfastapproxmath.cuh  mymutex.cuh  warpscan.cuh
src/libmycu/cudp/: CuBatchDP.cu  CuBatchDP.cuh  CuBatchDP_aln_final.cu  CuBatchDP_aln_final.cuh  CuBatchDP_com.h  CuBatchDP_final.cu  CuBatchDP_final.cuh  CuBatchDP_init.cu  CuBatchDP_init.cuh  CuBatchDP_init_block2.cu  CuBatchDP_init_block2.cuh  CuBatchDP_init_btck.cu  CuBatchDP_init_btck.cuh  CuBatchDP_init_corr.cu  CuBatchDP_init_corr.cuh
src/libmycu/cumapdp/: CuBatchMAPDP.cu  CuBatchMAPDP.cuh  CuBatchMAPDP_bwd.cu  CuBatchMAPDP_bwd.cuh  CuBatchMAPDP_com.h  CuBatchMAPDP_fwd.cu  CuBatchMAPDP_fwd.cuh  CuBatchMAPDP_fwd_scl.cu.unfinished  CuBatchMAPDP_map_btck.cu  CuBatchMAPDP_map_btck.cuh  CuBatchMAPDP_map_final.cu  CuBatchMAPDP_map_final.cuh  CuBatchMAPDP_prnt.cu  CuBatchMAPDP_prnt.cuh
src/libmycu/cupro/: CuBatchProcessing.cu  CuBatchProcessing.cu.obs  CuBatchProcessing.cuh  CuBatchProcessing.cuh.obs  CuBatchProcessingFinalizer.cpp  CuBatchProcessingFinalizer.h  CuBatchProcessingFinalizerJSON.cpp  CuBatchProcessingFinalizerPlain.cpp  CuBatchProcessing_com.cuh  CuDbReader.cpp  CuDbReader.h  CuDeviceMemory.cu  CuDeviceMemory.cuh  CuInputReader.h  CuRoDb.cpp  CuRoDb.h  IOProfileModel.cu  IOProfileModel.h  IOProfileModelBin.cu  IOProfileModelTxt.cu  PM2DVector.cuh  PM2DVectorFields.h  PMBatchProData.cpp  PMBatchProData.h  PMVector.cuh  PMVectorFields.h  SerializedCVS2Scores.cuh  SerializedCVS2Scores.h  SerializedCVS2ScoresAttr.h  SerializedCVS2ScoresCtor.cuh  SerializedScores.cuh  SerializedScores.h  SerializedScoresAttr.h  SerializedScoresCtor.cuh  SerializedScoresSM.cuh  SerializedScoresTM.cuh  TdDataReader.cpp  TdDataReader.h  VirtualCuRoDb.h
src/libmycu/cusco/: CuBatchScoreMatrix.cu  CuBatchScoreMatrix.cuh  CuBatchScoreMatrix_Init.cu  CuBatchScoreMatrix_Init.cuh  CuBatchScoreMatrix_Init_hdp1s.cu  CuBatchScoreMatrix_Init_hdp1s.cuh  CuBatchScoreMatrix_com.h  CuBatchScoreMatrix_cvs2s.cu  CuBatchScoreMatrix_cvs2s.cuh  CuBatchScoreMatrix_hdp1s.cu  CuBatchScoreMatrix_hdp1s.cuh  CuBatchScoreMatrix_ssss.cu  CuBatchScoreMatrix_ssss.cuh  CuBatchScoreMatrix_ssss_cvs2s.cu  CuBatchScoreMatrix_ssss_cvs2s.cuh  CuBatchScoreMatrix_ssss_cvs2s_hdp1s.cu  CuBatchScoreMatrix_ssss_cvs2s_hdp1s.cuh
src/libmycu/cusf/: CuSF_betainc.cuh  CuSF_com.h  CuSF_gammainc.cuh
src/libmycu/cuss/: CuBatchSS.cu  CuBatchSS.cuh  CuBatchSS_K.cuh  CuBatchSS_NN.cuh  CuBatchSS_SS18.cuh  CuBatchSS_com.h  CuBatchSS_dynplm.cu  CuBatchSS_dynplm.cuh  CuBatchSS_entropy.cuh  CuBatchSS_expected.cuh  CuBatchSS_lambda.cuh  CuBatchSS_minmax.cuh  CuBatchSS_score_probs.cu  CuBatchSS_score_probs.cuh  CuBatchSS_score_probs_dyn.cu  CuBatchSS_score_probs_dyn.cuh
src/libpro/: CMakeLists.txt
src/libpro/srcaln/: JobDispatcher.cpp  JobDispatcher.h  MSA.cpp  MSA.cpp.obs  MSA.h  MSA_rw.cpp  test.cu
src/libpro/srcpro/: BMProtoProfile.cpp  BMProtoProfile.h  BMSequence.cpp  BMSequence.h  CLOptions.cpp  CLOptions.h  CVS2Scores.cpp  CVS2Scores.h  Configuration.cpp  Configuration.h  Db.cpp  Db.h  DbProProbs.cpp  DbProProbs.h  MOptions.cpp  MOptions.cpp.obs  MOptions.h  MOptions.h.obs  PMProfileModel.cpp  PMProfileModel.h  PMProfileModelBase.cpp  PMProfileModelBase.h  PMTransModel.cpp  PMTransModel.h  SEGProfile.cpp  SEGProfile.h  SSSScores.cpp  SSSScores.h  SUBSTABLE.cpp  SUBSTABLE.h  TCTXVECT.cpp  TCTXVECT.h  TRANSPROBS.cpp  TRANSPROBS.h  VirtScores.cpp  VirtScores.h  VirtualRoDb.cpp  VirtualRoDb.h  datapro.h
src/libpro/srcsco/: AbstractScoreMatrix.cpp  AbstractScoreMatrix.h  IntegerScoreMatrix.cpp  IntegerScoreMatrix.h  ProfileMatrix.cpp  ProfileMatrix.h  ScoresAttr.cpp  ScoresAttr.h
src/libseg/: CMakeLists.txt  SEGAbstract.cpp  SEGAbstract.h  SEGSequence.cpp  SEGSequence.h  Segments.cpp  Segments.h  segdata.cpp  segdata.h
src/makecov/: CMakeLists.txt  makecov.cpp  makecov.h
src/makedb/: CMakeLists.txt  makedb.cpp  makedb.h
src/makepro/: CMakeLists.txt  inssp.pl  makepro.cmd  makepro.cpp  makepro.h  select.cpp  select.h  ssp.pl
src/makepro_and_run_comer/: CMakeLists.txt
src/neff/: CMakeLists.txt  neff.cpp  neff.h
src/tsafety/: TSCounterVar.h
(+3 files in other folders)
